--- a/config/config.yaml
+++ b/config/config.yaml
@@ -7,10 +7,12 @@ kitti:
   resize_size: [188, 621] # 50% of orig kitti size (376, 1242)
 
 model:
-  n_channels: 48
-  max_steps: 10
+  n_channels: 24
+  max_steps: 5
 
 locations: # relative to PROJECT_ROOT
   data:
     kitti: data/data_semantics
-  results: results
+
+wandb:
+  project: unsupervised_track_segmentation
