--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,11 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# project specific
+data
+lightning_out
+lightning_logs
+/scripts/outputs
+/scripts/multirun
+/outputs
